fix font and spacing in navbar

--- a/frontend/src/Pages/EcoCalculator.css
+++ b/frontend/src/Pages/EcoCalculator.css
@@ -44,7 +44,7 @@
 
 .ecoCalculatorCard h1 {
     font-size: 2rem;
-    font-family: Monterchi, sans-serif;
+    font-family: Cormorant Garamond, sans-serif;
     margin-bottom: 1rem;
     text-align: center;
 }
@@ -62,7 +62,7 @@
     width: 150px;
     display: block;
     font-size: 1.4rem;
-    font-family: Monterchi, sans-serif;
+    font-family: Cormorant Garamond, sans-serif;
     border-radius: 15px;
     text-transform: none;
     height: 45px;
