--- a/frontend/src/Pages/ResultPage.css
+++ b/frontend/src/Pages/ResultPage.css
@@ -54,7 +54,7 @@
     font-size: 16px;
     cursor: pointer;
     padding: 10px 15px;
-    font-family: Monterchi, sans-serif;
+    font-family: Cormorant Garamond, sans-serif;
     border-radius: 15px;
     font-weight: bold;
     width: 200px;
